--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -64,7 +64,7 @@
 		<div layout="row" layout-align="start start" class="navigation panel md-whiteframe-4dp" ng-class="{'open': navigation_panel, 'close': !navigation_panel}" style="background-color: {{base_hue_darkest.value}};">
 			<div layout="row" layout-align="start start" style="position: relative;" flex="100" layout-wrap>
 				<div flex="50" layout="row" layout-align="start center" layout-margin>
-					<md-button ng-click="navigation_panel = true; open_menu('CONTACT US')" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}};">
+					<md-button ng-click="null" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}};">
 						<md-icon style="color: {{base_hue_lightest.value}}">lock_outline</md-icon>
 						Log In
 					</md-button>
@@ -77,7 +77,7 @@
 						{{menu_title}}
 					</h3>
 				</div>
-				<md-list flex="100" style="margin-top: 48px;">
+				<md-list flex="100">
 					<md-list-item class="navigation item" flex="100" layout-padding>
 						<a href="/"><h3>Navigation Item #1</h3></a>
 					</md-list-item>
@@ -140,6 +140,7 @@
 						</md-tab>
 					</md-tabs>
 				</div>
+				<br><br>
 			</div>
 			<div class="navigation social" layout="row" layout-align="start start" flex="100">
 				<div layout="row" layout-align="center center" flex="50" style="margin-left: 24px;">
