--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -92,7 +92,7 @@
 					<md-divider></md-divider>
 				</md-list>
 				<br><br>
-				<div class="container" flex="100" layout-margin>
+				<div class="container" flex="100" layout-margin style="padding-bottom: 48px;">
 					<md-tabs md-dynamic-height md-border-bottom>
 						<md-tab label="Contact Info">
 							<md-content class="md-padding">
@@ -140,7 +140,6 @@
 						</md-tab>
 					</md-tabs>
 				</div>
-				<br><br>
 			</div>
 			<div class="navigation social" layout="row" layout-align="start start" flex="100">
 				<div layout="row" layout-align="center center" flex="50" style="margin-left: 24px;">
