--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -79,15 +79,15 @@
 				</div>
 				<md-list flex="100">
 					<md-list-item class="navigation item" flex="100" layout-padding>
-						<a href="/"><h3>Navigation Item #1</h3></a>
+						<a href="/"><p>Navigation Item #1</p></a>
 					</md-list-item>
 					<md-divider></md-divider>
 					<md-list-item class="navigation item" flex="100" layout-padding>
-						<a href="/"><h3>Navigation Item #2</h3></a>
+						<a href="/"><p>Navigation Item #2</p></a>
 					</md-list-item>
 					<md-divider></md-divider>
 					<md-list-item class="navigation item" flex="100" layout-padding>
-						<a href="/"><h3>Navigation Item #3</h3></a>
+						<a href="/"><p>Navigation Item #3</p></a>
 					</md-list-item>
 					<md-divider></md-divider>
 				</md-list>
