--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -141,7 +141,7 @@
 					</md-tabs>
 				</div>
 			</div>
-			<div class="navigation social" layout="row" layout-align="start center" flex="100">
+			<div class="navigation social md-whiteframe-4dp" layout="row" layout-align="start center" flex="100">
 				<div layout="row" layout-align="center center" flex="50" style="margin-left: 24px;">
 					<div flex="33" layout-align="center center">
 					
