--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -102,6 +102,10 @@
 										<h3 style="color: {{base_hue_lightest.value}}; opacity: .54;">817-469-1671</h3>
 										<p style="color: {{base_hue_lightest.value}}; opacity: .54;">Office</p>
 									</div>
+								</md-list-item>
+								<md-divider></md-divider>
+								<md-list-item class="md-2-line">
+									<md-icon style="color: {{base_hue_lightest.value}}; opacity: .54;">phone</md-icon>
 									<div class="md-list-item-text md-offset">
 										<h3 style="color: {{base_hue_lightest.value}}; opacity: .54;">817-274-8757</h3>
 										<p style="color: {{base_hue_lightest.value}}; opacity: .54;">Fax</p>
