--- a/lib/client/app/stylesheets/containers.css
+++ b/lib/client/app/stylesheets/containers.css
@@ -49,7 +49,9 @@ polyline{
 }
 
 .lw-auto-slider {height: 600px;}
-.index-blog-post {max-width: 450px!important; min-width: 33%;}
+.lw-auto-slider-container {background-color: #F5F5F5; z-index: 2; padding-top: 64px; padding-bottom: 64px; position: absolute; top: 0; bottom: 0; left: 0; right: 0; overflow-x: scroll; overflow-y: hidden;}
+.index-blog-post {max-width: 400px!important; width: 33%; overflow: hidden;}
+.index-blog-post img {width: 400px!important; height: auto; max-height: 200px;}
 
 @media screen and (max-width: 839px) {
 	.lw-auto-slider {height: 500px;}
