slider home page

--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -289,8 +289,8 @@
 		<div class="lw-auto-slider" style="position: relative;">
 			<div class="lw-auto-slider-container">
 				<div style="width: {{window_width * 2}}px;">
-					<div layout-padding class="index-blog-post">
-						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
+					<div layout-padding class="index-news-post">
+						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;" ng-class="{'one-third': window_width > 840}">
 							<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
 							<md-card-header>
 								<md-card-header-text>
@@ -302,8 +302,8 @@
 							</md-card-content>
 						</md-card>
 					</div>
-					<div layout-padding class="index-blog-post">
-						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
+					<div layout-padding class="index-news-post">
+						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;" ng-class="{'one-third': window_width > 840}">
 							<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
 							<md-card-header>
 								<md-card-header-text>
@@ -315,8 +315,8 @@
 							</md-card-content>
 						</md-card>
 					</div>
-					<div layout-padding class="index-blog-post">
-						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
+					<div layout-padding class="index-news-post">
+						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;" ng-class="{'one-third': window_width > 840}">
 							<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
 							<md-card-header>
 								<md-card-header-text>
@@ -328,8 +328,8 @@
 							</md-card-content>
 						</md-card>
 					</div>
-					<div layout-padding class="index-blog-post">
-						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
+					<div layout-padding class="index-news-post">
+						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;" ng-class="{'one-third': window_width > 840}">
 							<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
 							<md-card-header>
 								<md-card-header-text>
