--- a/lib/client/app/stylesheets/containers.css
+++ b/lib/client/app/stylesheets/containers.css
@@ -50,8 +50,8 @@ polyline{
 
 .lw-auto-slider {height: 600px;}
 .lw-auto-slider-container {background-color: #F5F5F5; z-index: 2; padding-top: 64px; padding-bottom: 64px; position: absolute; top: 0; bottom: 0; left: 0; right: 0; overflow-x: scroll; overflow-y: hidden;}
-.index-news-post {max-width: 400px!important; width: 33%; overflow: hidden;}
-.index-news-post md-card {overflow: hidden; float: left;}
+.index-news-post {max-width: 400px!important; width: 33%; overflow: hidden; float: left;}
+.index-news-post md-card {overflow: hidden;}
 .index-news-post img {width: 100%!important; height: auto;}
 
 @media screen and (max-width: 839px) {
