--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -289,9 +289,11 @@
 		<div class="lw-auto-slider" style="position: relative;">
 			<div class="lw-auto-slider-container">
 				<div style="width: {{window_width * 2}}px;">
-					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}">
+					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}" style="box-sizing: border-box;">
 						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
-							<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
+							<div class="post-image">
+								<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
+							</div>
 							<md-card-header>
 								<md-card-header-text>
 									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">ENTERTAINMENT DISTRICTS</span>
@@ -302,9 +304,11 @@
 							</md-card-content>
 						</md-card>
 					</div>
-					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}">
+					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}" style="box-sizing: border-box;">
 						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
-							<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
+							<div class="post-image">
+								<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
+							</div>
 							<md-card-header>
 								<md-card-header-text>
 									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">ENTERTAINMENT DISTRICTS</span>
@@ -315,9 +319,11 @@
 							</md-card-content>
 						</md-card>
 					</div>
-					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}">
+					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}" style="box-sizing: border-box;">
 						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
-							<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
+							<div class="post-image">
+								<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
+							</div>
 							<md-card-header>
 								<md-card-header-text>
 									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">COMPLEX URBAN DEVELOPMENT</span>
@@ -328,9 +334,11 @@
 							</md-card-content>
 						</md-card>
 					</div>
-					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}">
+					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}" style="box-sizing: border-box;">
 						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
-							<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
+							<div class="post-image">
+								<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
+							</div>
 							<md-card-header>
 								<md-card-header-text>
 									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">COMPLEX URBAN DEVELOPMENT</span>
