--- a/lib/client/app/stylesheets/containers.css
+++ b/lib/client/app/stylesheets/containers.css
@@ -53,7 +53,7 @@ polyline{
 .index-news-post {width: 33%; overflow: hidden; float: left; box-sizing: border-box;}
 .index-news-post md-card {overflow: hidden;}
 .index-news-post img {width: 100%!important; height: auto;}
-.index-news-post post-image {max-height: 300px; overflow: hidden;}
+.index-news-post .post-image {max-height: 300px; overflow: hidden;}
 .news.panel {width: 100%; overflow: hidden;}
 
 @media screen and (max-width: 839px) {
