--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -334,6 +334,8 @@
 							</md-card-content>
 						</md-card>
 					</div>
+				</div>
+				<div class="news panel" ng-if="window_width > 840">
 					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}">
 						<md-card layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<div class="post-image">
