--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -288,7 +288,7 @@
 		<!-- Item Carousel -->
 		<div class="lw-auto-slider" style="position: relative;">
 			<div class="lw-auto-slider-container">
-				<div class="news panel" ng-if="window_width > 840" ng-repeat="[1,2]" style="right: -{{$index * window_width + 16}}px">
+				<div class="news panel" ng-if="window_width > 840" ng-repeat="['one', 'two']" style="right: -{{$index * window_width + 16}}px">
 					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}">
 						<md-card layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<div class="post-image">
