--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -287,6 +287,9 @@
 
 		<!-- Item Carousel -->
 		<div class="lw-auto-slider" style="position: relative;">
+			<div style="position: absolute; width: 100%; left: 0; text-align: center">
+				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">MMA NEWS</h1>
+			</div>
 			<div class="lw-auto-slider-container">
 				<div class="news panel" ng-if="window_width > 840" ng-repeat="item in ['one', 'two']" style="right: -{{$index * window_width + 16}}px">
 					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}">
