--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -287,7 +287,7 @@
 
 		<!-- Item Carousel -->
 		<div class="lw-auto-slider" style="position: relative;">
-			<div style="position: absolute; width: 100%; left: 0; text-align: center">
+			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
 				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">MMA NEWS</h1>
 			</div>
 			<div class="lw-auto-slider-container">
