--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -291,6 +291,12 @@
 				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">MMA NEWS</h1>
 			</div>
 			<div class="lw-auto-slider-container">
+				<md-button ng-click="null" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 16px; top: 40%;">
+					<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>
+				</md-button>
+				<md-button ng-click="null" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; right: 16px; top: 40%;">
+					<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_left</md-icon>
+				</md-button>
 				<div class="news panel" ng-if="window_width > 840" ng-repeat="item in ['one', 'two']" style="right: -{{$index * window_width + 16}}px">
 					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}">
 						<md-card layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
