--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -291,11 +291,11 @@
 				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">MMA NEWS</h1>
 			</div>
 			<div class="lw-auto-slider-container">
-				<md-button class="md-whiteframe-4dp" ng-click="null" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 40%; z-index: 3; height: 64px; min-width: 24px;">
-					<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>
+				<md-button class="md-whiteframe-4dp" ng-click="null" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
+					<md-icon style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_right</md-icon>
 				</md-button>
-				<md-button class="md-whiteframe-4dp" ng-click="null" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; right: 8px; top: 40%; z-index: 3; height: 64px; min-width: 24px;">
-					<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_left</md-icon>
+				<md-button class="md-whiteframe-4dp" ng-click="null" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; right: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
+					<md-icon style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_left</md-icon>
 				</md-button>
 				<div class="news panel" ng-if="window_width > 840" ng-repeat="item in ['one', 'two']" style="right: -{{$index * window_width + 16}}px">
 					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}">
