--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -297,8 +297,8 @@
 				<md-button class="md-whiteframe-4dp" ng-click="null" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; right: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
 					<md-icon style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_left</md-icon>
 				</md-button>
-				<div class="news panel" ng-if="window_width > 840" ng-repeat="item in ['one', 'two']" style="right: -{{$index * window_width + 16}}px">
-					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}">
+				<div class="news panel" style="left: 0; width: {{window_width * news_post_width}}px">
+					<div layout-padding class="index-news-post" ng-repeat="item in ['one', 'two', 'three', 'four']" ng-class="{'one-third': window_width > 840, 'full-width': window_width < 840}">
 						<md-card layout-padding style="background: transparent; height: 100%; padding: 0;">
 							<div class="post-image">
 								<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
@@ -306,36 +306,6 @@
 							<md-card-header>
 								<md-card-header-text>
 									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">ENTERTAINMENT DISTRICTS</span>
-								</md-card-header-text>
-							</md-card-header>
-							<md-card-content>
-								<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-							</md-card-content>
-						</md-card>
-					</div>
-					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}">
-						<md-card layout-padding style="background: transparent; height: 100%; padding: 0;">
-							<div class="post-image">
-								<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
-							</div>
-							<md-card-header>
-								<md-card-header-text>
-									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">ENTERTAINMENT DISTRICTS</span>
-								</md-card-header-text>
-							</md-card-header>
-							<md-card-content>
-								<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-							</md-card-content>
-						</md-card>
-					</div>
-					<div layout-padding class="index-news-post" ng-class="{'one-third': window_width > 840}">
-						<md-card layout-padding style="background: transparent; height: 100%; padding: 0;">
-							<div class="post-image">
-								<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
-							</div>
-							<md-card-header>
-								<md-card-header-text>
-									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">COMPLEX URBAN DEVELOPMENT</span>
 								</md-card-header-text>
 							</md-card-header>
 							<md-card-content>
