--- a/lib/client/app/stylesheets/header.css
+++ b/lib/client/app/stylesheets/header.css
@@ -1,10 +1,35 @@
 /* css document */
-.main-header {min-height: 100px;}
 .header {z-index: 4!important;}
-.nav {
-	margin: 0 auto; 
-	-webkit-transition: margin 2s; /* Safari */
-    transition: margin 2s;
-}
 .md-subheader-inner {width: 100%;}
-.nav.slide-nav .md-subheader-inner {margin-left: -35%;}
+.navigation.panel {
+	width: 33%; height: 100%; max-height: 100%; 
+	overflow-y: auto; position: fixed; top: 0; z-index: 4;
+}
+.navigation.social {
+	position: fixed; height: 48px; bottom: 0; width: 33%;
+} 
+
+.navigation.panel.open, .navigation.panel.open .navigation.social {
+	/*animation-name: navigation_open;*/
+    animation-duration: .2s;
+    animation-timing-function: ease-in-out;
+    right: 0;
+}
+
+.navigation.panel.close, .navigation.panel.close .navigation.social {
+	/*animation-name: navigation_close;*/
+    animation-duration: .2s;
+    animation-timing-function: ease-in;
+    right: -33%;
+}
+
+.navigation.icons {width: 36px; height: 36px;}
+
+@keyframes navigation_open {
+    from {right: -33%;}
+    to {right: 0;}
+}
+@keyframes navigation_close {
+    from {right: 0;}
+    to {right: -33%;}
+}
