--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -203,7 +203,7 @@
 												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/005-compass.svg">
 												</md-icon>
 												<br><br>
-												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">CIVIL ENGINEERING</span>
+												<span class="md-title">CIVIL ENGINEERING</span>
 											</md-card-header-text>
 										</md-card-header>
 									</md-card>
@@ -221,7 +221,7 @@
 												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/003-plant.svg">
 												</md-icon>
 												<br><br>
-												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">LANDSCAPE ARCHITECTURE</span>
+												<span class="md-title">LANDSCAPE ARCHITECTURE</span>
 											</md-card-header-text>
 										</md-card-header>
 									</md-card>
@@ -238,7 +238,7 @@
 												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/004-whiteboard.svg">
 												</md-icon>
 												<br><br>
-												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">PLANNING</span>
+												<span class="md-title">PLANNING</span>
 											</md-card-header-text>
 										</md-card-header>
 									</md-card>
@@ -255,7 +255,7 @@
 												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/002-tripod.svg">
 												</md-icon>
 												<br><br>
-												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">SURVEYING</span>
+												<span class="md-title">SURVEYING</span>
 											</md-card-header-text>
 										</md-card-header>
 									</md-card>
@@ -272,7 +272,7 @@
 												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/001-travel.svg">
 												</md-icon>
 												<br><br>
-												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">GIS</span>
+												<span class="md-title">GIS</span>
 											</md-card-header-text>
 										</md-card-header>
 									</md-card>
